force-app/main/default/objects/Activity/fields/Consumo_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Mensual__c</fullName>
    <label>Consumo Mensual (Kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>