force-app/main/default/objects/Activity/fields/Email_Enviado_a_Team_Cafe__c.field-meta.xml
<CustomField>
    <fullName>Email_Enviado_a_Team_Cafe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Enviado a Team Cafe</label>
    <type>Checkbox</type>
</CustomField>