force-app/main/default/objects/Activity/fields/Estado_de_la_visita__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_visita__c</fullName>
    <label>Estado de la visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Programada</fullName>
                <default>true</default>
                <label>Programada</label>
            </value>
            <value>
                <fullName>Concretada</fullName>
            </value>
            <value>
                <fullName>No Lograda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>