force-app/main/default/objects/Activity/fields/Formula_Team_Cafe__c.field-meta.xml
<CustomField>
    <fullName>Formula_Team_Cafe__c</fullName>
    <formula>IF( Email_Enviado_a_Team_Cafe__c , TODAY() + 2, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Team Cafe</label>
    <type>Date</type>
</CustomField>