force-app/main/default/objects/Activity/fields/Inversion_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Inversion_Adicional__c</fullName>
    <label>Inversión Adicional (CLP)</label>
    <length>35</length>
    <type>Text</type>
</CustomField>