force-app/main/default/objects/Activity/fields/Invitados__c.field-meta.xml
<CustomField>
    <fullName>Invitados__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitados</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>