force-app/main/default/objects/Activity/fields/M_quina_de_caf__c.field-meta.xml
<CustomField>
    <fullName>M_quina_de_caf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Máquina de café</label>
    <referenceTo>Maquina_de_cafe__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>