force-app/main/default/objects/Activity/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <label>Monto asegurado (CLP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>