force-app/main/default/objects/Activity/fields/Monto_del_Cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Monto_del_Cr_dito__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto del Crédito (CLP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>