force-app/main/default/objects/Activity/fields/Motivo_de_la_muestra__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_la_muestra__c</fullName>
    <label>Motivo de la muestra</label>
    <type>TextArea</type>
</CustomField>