force-app/main/default/objects/Activity/fields/Nombre_de_la_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Actividad__c</fullName>
    <label>Nombre de la Actividad</label>
    <type>TextArea</type>
</CustomField>