force-app/main/default/objects/Activity/fields/Plazo_meses__c.field-meta.xml
<CustomField>
    <fullName>Plazo_meses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plazo (meses)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>