force-app/main/default/objects/Activity/fields/Por_que_confiamos_que_nos_pagar__c.field-meta.xml
<CustomField>
    <fullName>Por_que_confiamos_que_nos_pagar__c</fullName>
    <label>Por qué confiamos que nos pagará?</label>
    <type>TextArea</type>
</CustomField>