force-app/main/default/objects/Activity/fields/Porcentaje_utilizaci_n_cupo__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_utilizaci_n_cupo__c</fullName>
    <label>Porcentaje utilización cupo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>