force-app/main/default/objects/Activity/fields/Porque_fue_rechazado_por_la_aseguradora__c.field-meta.xml
<CustomField>
    <fullName>Porque_fue_rechazado_por_la_aseguradora__c</fullName>
    <label>Motivo de rechazo de la aseguradora?</label>
    <type>TextArea</type>
</CustomField>