force-app/main/default/objects/Activity/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Precios__c.Detalle_de_producto__c</field>
            <operation>equals</operation>
            <valueField>$Source.producto__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Precios__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>