force-app/main/default/objects/Activity/fields/precioprecio__c.field-meta.xml
<CustomField>
    <fullName>precioprecio__c</fullName>
    <formula>Precio__r.Precio_de_lista__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>precioprecio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>