force-app/main/default/objects/Activity/fields/producto__c.field-meta.xml
<CustomField>
    <fullName>producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>