force-app/main/default/objects/Activity/fields/Recomendacion_de_Precio__c.field-meta.xml
<CustomField>
    <fullName>Recomendacion_de_Precio__c</fullName>
    <label>Recomendación de Precio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>