force-app/main/default/objects/Activity/fields/Texto2__c.field-meta.xml
<CustomField>
    <fullName>Texto2__c</fullName>
    <formula>&apos;Si el monto del crédito es &gt; UF 300 (Nominado) --&gt; Tiempo de respuesta 7 días&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>y</label>
    <type>Text</type>
</CustomField>