force-app/main/default/objects/Activity/fields/texto__c.field-meta.xml
<CustomField>
    <fullName>texto__c</fullName>
    <formula>&apos;Si el monto del crédito es &lt; UF 300 (Innominado) --&gt; Tiempo de respuesta 24 horas&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recuerde:</label>
    <type>Text</type>
</CustomField>