force-app/main/default/objects/Activity/fields/Tiene_DICOM__c.field-meta.xml
<CustomField>
    <fullName>Tiene_DICOM__c</fullName>
    <label>Tiene DICOM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>