force-app/main/default/objects/Activity/fields/Tipo_de_Cafe__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cafe__c</fullName>
    <label>Tipo de Café</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grano</fullName>
            </value>
            <value>
                <fullName>Molido</fullName>
            </value>
            <value>
                <fullName>Cápsula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>