force-app/main/default/objects/Activity/fields/Tipo_de_Leche__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Leche__c</fullName>
    <label>Tipo de Leche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polvo</fullName>
            </value>
            <value>
                <fullName>Líquida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>