force-app/main/default/objects/Activity/fields/Visita__c.field-meta.xml
<CustomField>
    <fullName>Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relaciona eventos con el objeto custom Visita</description>
    <label>Visita</label>
    <referenceTo>Visitas__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>